leptos_macro/tests/ui/view/undefined_slot.stderr
error[E0599]: no method named `else_if` found for struct `IfPropsBuilder` in the current scope
  --> tests/ui/view/undefined_slot.rs:25:13
   |
12 |   #[component]
   |   ------------ method `else_if` not found for this struct
...
23 | /     view! {
24 | |         <If>
25 | |             <ElseIf slot />
   | |            -^^^^^^^^^^^^^^^ method not found in `IfPropsBuilder`
   | |____________|
   |

error[E0599]: no method named `else_if` found for struct `SlotIfPropsBuilder` in the current scope
  --> tests/ui/view/undefined_slot.rs:31:13
   |
17 |   #[component]
   |   ------------ method `else_if` not found for this struct
...
29 | /     view! {
30 | |         <SlotIf>
31 | |             <ElseIf slot />
   | |            -^^^^^^^^^^^^^^^ method not found in `SlotIfPropsBuilder`
   | |____________|
   |
